--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "axios": "^0.18.1",
     "belter": "^1.0.95",
-    "grumbler-scripts": "^3",
+    "grumbler-scripts": "3.0.21",
     "serve": "^11.0.2",
     "zoid": "^6.0.67"
   }
